
  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # Javascript:
            * Dialog:
                - Add option 'propagateEvent':.
                    - When enabled, a copy of the event prefixed by 'dialog-' is triggered to allow the usage of external handlers (the dialog element if opened or the window.document).
                      e.g: $(document).on('dialog-open', function() { ... });


== Version 2.6.3 ==

  Users side :
  ------------
    # Apps :
        * Documents :
            - The cloning of Document has been disabled.
        * Commercial :
            - The cloning of Strategy has been disabled.
        * Emails :
            - The cloning of Mailing List has been improved.
        * Graphs :
            - Cloning a Graph caused an error 500.
        * Polls :
            - The cloning of Campaigns & Replies has been disabled.
        * Recurrents :
            - The cloning of Generator has been disabled.


  Developers side :
  -----------------

    Non breaking changes :
    ----------------------
        # The tutorials have been improved (better populate scripts, talk about
          MinionModel & UUIDs).


== Version 2.6.2 ==

  Users side :
  ------------
    # Several issues in the job scheduler has been fixed for periodic jobs :
        - The start date of the jobs depended on the hour the command "creme_job_manager" has started.
        - Some useless extra runs have been removed.
    # 2 new settings have been added :
        - 'BASE_HTML_EXTRA_INCLUDED' to include some templates in all pages.
        - 'CELL_SIZE' to limit the size of lists (relationships, ManyToMany...)
           & so avoid some performance issues.
    # The style of the preview table in the header-filter form has been improved.
    # Apps :
        * Persons :
            - In the bar-brick for Organisations the logo was never displayed.
        * Documents :