@@ -57,7 +57,8 @@ creme.dialog.Dialog = creme.component.Component.sub({
             useFrameActions: true,
             fillFrameOnError: false,
             closeOnEscape: true,
-            scrollbackOnClose: true
+            scrollbackOnClose: true,
+            id: undefined
         }, options || {});
 
         this._initFrame(options);
@@ -155,6 +156,7 @@ creme.dialog.Dialog = creme.component.Component.sub({
             this._isClosing = false;
         }
 
+        this.trigger('before-destroy', options);
         this._destroyDialog();
         this.trigger('close', options);
     },
@@ -528,11 +530,25 @@ creme.dialog.Dialog = creme.component.Component.sub({
         return this;
     },
 
+    id: function() {
+        return this.options.id;
+    },
+
     trigger: function(event) {
         var data = Array.copy(arguments).slice(1);
 
         if (this.options.propagateEvent) {
-            $(document).trigger('dialog-' + event, [this].concat(data || []));
+            /*
+             * When propagateEvent is enabled, a copy of the event prefixed by 'dialog-' is triggered to allow
+             * the usage of external handlers. It can be used with the new id option to listen a specific
+             * popup.
+             * e.g: $(document).on('dialog-open', '#my-popup', function() { ... });
+             */
+            if (this.isOpened()) {
+                $(this._dialog).trigger('dialog-' + event, [this].concat(data || []));
+            } else {
+                $(document).trigger('dialog-' + event, [this].concat(data || []));
+            }
         }
 
         this._events.trigger(event, data, this);
@@ -573,11 +589,18 @@ creme.dialog.Dialog = creme.component.Component.sub({
         var frame = this._frame;
         var container = frame.delegate();
 
+        var dialogId = Object.isFunc(options.id) ? options.id() : options.id || '';
         var buttons = $.extend(this._defaultButtons({}, options), options.buttons || {});
         var content = $('<div/>').append(container);
         var scroll = Assert.in(options.scroll, _DIALOG_SCROLLTYPES, 'scroll type "${value}" is invalid');
-        var is_framescroll = (scroll === 'frame');
+        var isFramescroll = (scroll === 'frame');
         var position = {};
+
+        content.data('uiCremeDialog', this);
+
+        if (!Object.isEmpty(dialogId)) {
+            content.attr('id', dialogId);
+        }
 
         if (Object.isEmpty(options.within)) {
             position = {
@@ -593,13 +616,14 @@ creme.dialog.Dialog = creme.component.Component.sub({
             };
         }
 
-        var resizable = is_framescroll ? options.resizable : false;
-        var draggable = is_framescroll ? options.draggable : false;
+        var resizable = isFramescroll ? options.resizable : false;
+        var draggable = isFramescroll ? options.draggable : false;
         var width = _.clamp(options.width, options.minWidth, options.maxWidth);
         var height = _.clamp(options.height, options.minHeight, options.maxHeight);
         var title = options.title ? String(options.title).decodeHTMLEntities() : options.title;
 
         var dialogOptions = {
+            dialogClass: 'ui-creme-dialog',
             buttons:   Object.values(buttons),
             title:     title,
             modal:     true,
@@ -827,6 +851,26 @@ $.widget("ui.dialog", $.ui.dialog, {
         }
 
         return this._super(event);
+    },
+
+    fitToFrameSize: function() {
+        var dialog = this.cremeInstance();
+
+        if (!Object.isNone(dialog)) {
+            dialog.fitToFrameSize();
+        }
+    },
+
+    resize: function(width, height) {
+        var dialog = this.cremeInstance();
+
+        if (!Object.isNone(dialog)) {
+            dialog.resize(width, height);
+        }
+    },
+
+    cremeInstance: function() {
+        return this.element.data('uiCremeDialog');
     }
 });
 
