@@ -84,7 +84,8 @@
     function openConfirm(dialog, confirm) {
         if (confirm) {
             new creme.dialog.ConfirmDialog(gettext('Are you sure?'), {
-                defaultButtonLabels: {'ok': gettext('Confirm')}
+                defaultButtonLabels: {'ok': gettext('Confirm')},
+                id: 'confirm-dialog'
             }).onOk(function() {
                 dialog.open();
             }).open();
@@ -200,7 +201,9 @@
                     scroll: scroll,
                     scrollbackOnClose: scrollbackOnClose,
                     closeOnEscape: closeOnEscape,
-                    defaultButtonLabels: defaultButtonLabels
+                    defaultButtonLabels: defaultButtonLabels,
+                    id: 'static-popup',
+                    propagateEvent: true
                 });
 
                 openConfirm(dialog, $('#popup input.popup-confirm').is(':checked'));
@@ -217,7 +220,9 @@
                         scroll: scroll,
                         scrollbackOnClose: scrollbackOnClose,
                         closeOnEscape: closeOnEscape,
-                        defaultButtonLabels: defaultButtonLabels
+                        defaultButtonLabels: defaultButtonLabels,
+                        id: 'stacked-popup-%d'.format(index + 1),
+                        propagateEvent: true
                     }));
                 }
 
@@ -233,7 +238,9 @@
                 title: 'Static',
                 scroll: $('#popup input.popup-scroll-background').is(':checked') ? 'background' : 'frame',
                 closeOnEscape: $('#popup input.popup-closeonescape').is(':checked'),
-                scrollbackOnClose: $('#popup input.popup-scrollbackonclose').is(':checked')
+                scrollbackOnClose: $('#popup input.popup-scrollbackonclose').is(':checked'),
+                id: 'blocklist-popup',
+                propagateEvent: true
             });
 
             dialog.on('frame-activated', function() {
@@ -266,7 +273,9 @@
                                            submitOnKey: $('#popup .popup-form [name="submitkey"]').is(':checked') ? 13 : false,
                                            scrollbackOnClose: $('#popup input.popup-scrollbackonclose').is(':checked'),
                                            reloadOnSuccess: reloadOnSuccess,
-                                           redirectOnSuccess: !Object.isEmpty(redirectOnSuccessUrl) ? redirectOnSuccessUrl : redirectOnSuccess
+                                           redirectOnSuccess: !Object.isEmpty(redirectOnSuccessUrl) ? redirectOnSuccessUrl : redirectOnSuccess,
+                                           propagateEvent: true,
+                                           id: 'form-popup'
                                        })
                                       .onFormSuccess(function(event, data) {
                                            console.log('submitted >', data);
